--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,33 +1,44 @@
 @import '../../styles/_variables.css';
 
 .button {
-  display: flex;
-  justify-content: space-between;
-  padding: 15px;
-  font-size: 1rem;
+  padding: 0.4rem 2rem;
+  font-weight: 600;
+  font-size: 0.8rem;
   font-family: var(--font-main);
-  background-color: #ffffff;
-  border-radius: 0.2em;
+  background-color: transparent;
+  border: 2px solid #e2e2e2;
+  border-radius: 5rem;
+  cursor: pointer;
+  transition: 0.15s ease;
+  appearance: none;
 
-  &__close {
-    width: 25px;
-    height: 25px;
-    background-color: transparent;
-    background-image: url('./close.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    border: none;
-    border-radius: 0;
-    cursor: pointer;
-    opacity: 0.25;
-    transition: 0.15s ease;
-    appearance: none;
+  &:hover,
+  &:focus {
+    border-color: #cfcfcf;
+    outline: none;
+  }
+
+  &--add {
+    position: relative;
+    color: var(--color-green);
+    border-color: var(--color-green);
 
     &:hover,
     &:focus {
-      outline: none;
-      opacity: 0.6;
+      border-color: color(var(--color-green) blackness(35%));
+    }
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 1.2rem;
+      display: block;
+      width: 10px;
+      height: 10px;
+      background: transparent url('./add.svg') no-repeat center;
+      background-size: 100%;
+      transform: translateY(-50%);
     }
   }
 }
