--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -1,6 +1,8 @@
 :root {
-  --font-main: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
+  --font-main: 'Montserrat', 'Helvetica', 'Arial', sans-serif;
   
-  --color-light-blue: #eaedf0;
+  --color-light-blue: #f0f4f6;
+  --color-light-text: #b3b3b3;
+  --color-green: #1ac791;
   --color-main: var(--color-light-blue);
 }
