--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,9 @@
 .sidebar {
-  margin: 30px 0;
+  padding: 30px 0;
   font-size: 1rem;
   border-radius: 0.2em;
+
+  &__title {
+    margin-top: 0;
+  }
 }
