--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -9,4 +9,6 @@
 
 body {
   background-color: var(--color-main);
+  /* background-color: #F3F9FF; */
+  /* background-image: linear-gradient(135deg, #e2effd 0%, #e0e6fc 100%); */
 }
