--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -2,7 +2,7 @@
   --font-main: 'Montserrat', 'Helvetica', 'Arial', sans-serif;
   
   --color-light-blue: #f0f4f6;
-  --color-light-text: #b3b3b3;
+  --color-light-text: color(#000000 a(50%));
   --color-green: #1ac791;
   --color-main: var(--color-light-blue);
 }
