Начал форму фильтрации

--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -4,5 +4,7 @@
   --color-light-blue: #f0f4f6;
   --color-light-text: color(#000000 a(50%));
   --color-green: #1ac791;
+  --color-purple: #48486b;
   --color-main: var(--color-light-blue);
+  --color-secondary: var(--color-purple);
 }
