--- a/src/styles/components/title.css
+++ b/src/styles/components/title.css
@@ -1,5 +1,6 @@
 .title {
   margin: 1.2em 0;
+  color: var(--color-secondary);
   font-weight: 500;
   font-size: 1.5rem;
   font-family: var(--font-main);
