Добавлено выпадающее меню с жанрами и фильтрация

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,11 +1,13 @@
 @import '../../styles/_variables.css';
 
 .list {
+  overflow: hidden;
   font-size: 1rem;
   font-family: var(--font-main);
+  border-radius: 0.2em;
 
   &__item {
-    margin: 5px 0;
+    margin: 1px 0;
     line-height: 1.4em;
   }
 
