--- a/src/components/SongItem/SongItem.css
+++ b/src/components/SongItem/SongItem.css
@@ -6,11 +6,12 @@
   font-family: var(--font-main);
   background-color: #ffffff;
   border-radius: 0.2em;
+  box-shadow: 0 10px 25px -10px color(var(--color-secondary) a(15%));
 
   &__title {
     margin-bottom: 1em;
     color: var(--color-secondary);
-    font-weight: 500;
+    font-weight: 600;
     font-size: 1.125em;
   }
 
