--- a/src/components/FilterForm/FilterForm.css
+++ b/src/components/FilterForm/FilterForm.css
@@ -26,6 +26,61 @@
     }
   }
 
+  &__select {
+    &.is-focused {
+      .Select-control {
+        background-color: transparent !important;
+        border-color: var(--color-secondary) !important;
+        box-shadow: none !important;
+      }
+    }
+
+    .Select-control {
+      height: auto;
+      font-size: 1em;
+      background-color: transparent;
+      border: none;
+      border-bottom: 2px solid var(--color-secondary);
+      border-radius: 0;
+
+      .Select-value,
+      .Select-placeholder {
+        padding-right: 0 !important;
+        padding-left: 0 !important;
+      }
+    }
+
+    .Select-value {
+      padding-top: 0.4em;
+      padding-bottom: 0.4em;
+      line-height: 1.2em;
+    }
+
+    .Select-value-label {
+      color: var(--color-secondary) !important;
+      font-weight: 600;
+    }
+
+    .Select-input {
+      height: auto;
+      padding: 0;
+
+      & > input {
+        padding-top: 0.75em;
+        padding-bottom: 0.8em;
+        color: var(--color-secondary);
+        font-weight: 600;
+        line-height: 1.2em;
+      }
+    }
+
+    .Select-arrow-zone {
+      width: 15px;
+      padding-right: 0 !important;
+      text-align: right;
+    }
+  }
+
   &__input {
     width: 100%;
     padding: 0.8em 0;
@@ -33,6 +88,7 @@
     font-weight: 600;
     font-size: 1em;
     font-family: inherit;
+    line-height: 1.2em;
     background-color: transparent;
     border: none;
     border-bottom: 2px solid var(--color-secondary);
