--- a/src/components/SongList/SongList.css
+++ b/src/components/SongList/SongList.css
@@ -1,8 +1,13 @@
 .song-list {
   margin: 30px 0;
 
+  &__list {
+    margin: 0;
+    padding: 0;
+  }
+
   &__item {
-    margin: 5px 0;
+    margin: 15px 0;
 
     &:first-child {
       margin-top: 0;
