--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,9 +1,13 @@
 .sidebar {
-  padding: 30px 0;
+  padding: 20px 0;
   font-size: 1rem;
   border-radius: 0.2em;
 
   &__title {
+    margin-top: 0;
+  }
+
+  &__message {
     margin-top: 0;
   }
 }
