--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -1,7 +1,7 @@
 :root {
   --font-main: 'Montserrat', 'Helvetica', 'Arial', sans-serif;
   
-  --color-light-blue: #f0f4f6;
+  --color-light-blue: #cbd6e9;
   --color-light-text: color(#000000 a(50%));
   --color-green: #1ac791;
   --color-purple: #48486b;
