--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -4,7 +4,7 @@
   overflow: hidden;
   font-size: 1rem;
   font-family: var(--font-main);
-  border-radius: 0.2em;
+  border-radius: 4px;
 
   &__item {
     margin: 1px 0;
