--- a/src/components/SongItem/SongItem.css
+++ b/src/components/SongItem/SongItem.css
@@ -5,7 +5,7 @@
   font-size: 1rem;
   font-family: var(--font-main);
   background-color: #ffffff;
-  border-radius: 0.2em;
+  border-radius: 4px;
   box-shadow: 0 10px 25px -10px color(var(--color-secondary) a(15%));
 
   &__title {
