--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -10,5 +10,7 @@
 body {
   background-color: var(--color-main);
   /* background-color: #F3F9FF; */
-  /* background-image: linear-gradient(135deg, #e2effd 0%, #e0e6fc 100%); */
+  background-image: linear-gradient(45deg, var(--color-main) 0%, #f0f5fb 100%);
+  background-attachment: fixed;
+  background-size: 100%;
 }
