--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -5,6 +5,7 @@
   --color-light-text: color(#000000 a(50%));
   --color-green: #1ac791;
   --color-purple: #48486b;
+  --color-purple-bright: #4b5eb9;
   --color-main: var(--color-light-blue);
   --color-secondary: var(--color-purple);
 }
