--- a/src/components/InfoText/InfoText.css
+++ b/src/components/InfoText/InfoText.css
@@ -7,7 +7,8 @@
   line-height: 1.4em;
 
   &--author,
-  &--genre {
+  &--genre,
+  &--date {
     position: relative;
     padding-left: 25px;
 
@@ -28,6 +29,10 @@
 
   &--author:before {
     background-image: url('./author.svg');
+  }
+
+  &--date:before {
+    background-image: url('./date.svg');
   }
 
   &--genre:before {
