--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,15 +11,19 @@
     list-style: none;
   }
 
-  &__item {
-    padding: 15px;
-  }
-
   &__link {
+    display: block;
+    margin: 0 15px;
+    padding: 15px 0;
     color: var(--color-secondary);
     font-weight: 500;
     font-size: 1em;
     font-family: var(--font-main);
     text-decoration: none;
+    border-bottom: 2px solid transparent;
+
+    &--active {
+      border-color: var(--color-secondary);
+    }
   }
 }
