--- a/src/components/History/History.css
+++ b/src/components/History/History.css
@@ -37,10 +37,10 @@
 
   &__list-item {
     position: relative;
-    margin: 20px 0;
+    margin: 15px 0;
     padding-left: 20px;
     color: var(--color-secondary);
-    line-height: 1;
+    line-height: 1.4em;
 
     &:first-child {
       margin-top: 0;
