--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,18 +1,17 @@
 .sidebar {
-  padding: 15px 0;
+  padding: 15px 0 0 0;
   font-size: 1rem;
   text-align: center;
-  border-radius: 0.2em;
 
   &__title {
     margin-top: 0;
   }
 
   &__message {
-    margin-top: 0;
+    margin: 0;
   }
 
   &__button {
-    margin: 15px auto;
+    margin: 15px auto 0;
   }
 }
