--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -14,3 +14,8 @@ body {
   background-attachment: fixed;
   background-size: 100%;
 }
+
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+}
