--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -4,6 +4,7 @@
   overflow: hidden;
   font-size: 1rem;
   font-family: var(--font-main);
+  text-align: left;
   border-radius: 4px;
 
   &__item {
