--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -8,6 +8,7 @@
   font-size: 1rem;
   font-family: var(--font-main);
   line-height: 1.2em;
+  text-align: left;
   background-color: color(#ffffff a(40%));
   border-radius: 4px;
 }
