--- a/src/components/HistoryItem/HistoryItem.css
+++ b/src/components/HistoryItem/HistoryItem.css
@@ -1,12 +1,30 @@
 @import '../../styles/_variables.css';
 
-.history {
+.history-item {
+  position: relative;
   margin-bottom: 15px;
-  padding: 30px;
+  padding: 20px;
   font-size: 1rem;
   font-family: var(--font-main);
   background-color: #ffffff;
   border-radius: 4px;
+
+  &:hover,
+  &:focus {
+    .history-item__box {
+      opacity: 1;
+    }
+  }
+
+  &__box {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 15px 15px 0 0;
+    background-color: #ffffff;
+    opacity: 0;
+    transition: 0.15s ease;
+  }
 
   &__header {
     display: flex;
