--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,18 @@
+@import '../../styles/_media.css';
+@import '../../styles/_variables.css';
+
 .app {
-  
+  &__header {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    box-shadow: 0 -10px 25px -10px color(#000000 alpha(15%));
+
+    @media (--screen-md) {
+      position: relative;
+      box-shadow: none;
+    }
+  }
 }
