--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,4 @@
+@import '../../styles/_media.css';
 @import '../../styles/_variables.css';
 
 .navbar {
@@ -11,8 +12,20 @@
     list-style: none;
   }
 
+  &__item {
+    width: 80px;
+    height: 40px;
+
+    @media (--screen-md) {
+      width: auto;
+      height: auto;
+    }
+  }
+
   &__link {
     display: block;
+    width: 100%;
+    height: 100%;
     margin: 0 15px;
     padding: 15px 0;
     color: var(--color-secondary);
@@ -20,10 +33,43 @@
     font-size: 1em;
     font-family: var(--font-main);
     text-decoration: none;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto 70%;
     border-bottom: 2px solid transparent;
+
+    @media (--screen-md) {
+      width: auto;
+      height: auto;
+    }
 
     &--active {
       border-color: var(--color-secondary);
+    }
+
+    &--home {
+      background-image: url('./home.svg');
+
+      @media (--screen-md) {
+        background-image: none;
+      }
+    }
+
+    &--history {
+      background-image: url('./history.svg');
+
+      @media (--screen-md) {
+        background-image: none;
+      }
+    }
+  }
+
+  &__text {
+    display: none;
+
+    @media (--screen-md) {
+      display: block;
+      margin: 0;
     }
   }
 }
