--- a/src/components/SongItem/SongItem.css
+++ b/src/components/SongItem/SongItem.css
@@ -2,7 +2,6 @@
 @import '../../styles/_media.css';
 
 .song-item {
-  padding: 1em;
   font-size: 1rem;
   font-family: var(--font-main);
   background-color: #ffffff;
@@ -14,21 +13,25 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    margin-bottom: 1em;
+    padding: 1em;
 
     @media (--screen-md) {
       flex-direction: row;
     }
   }
 
+  &__content {
+    padding: 0 1em;
+  }
+
+  &__footer {
+    padding: 1em;
+    border-top: 1px solid #f0f5fb;
+  }
+
   &__label-box {
     display: flex;
-    margin-top: 15px;
-
-    @media (--screen-md) {
-      margin-top: 0;
-      margin-left: auto;
-    }
+    margin: 15px 0;
   }
 
   &__label {
@@ -43,6 +46,10 @@
     color: var(--color-secondary);
     font-weight: 600;
     font-size: 1.125em;
+  }
+
+  &__edit {
+    margin-left: auto;
   }
 
   &__info {
@@ -63,5 +70,9 @@
 
   &__text {
     margin: 5px 0;
+
+    @media (--screen-md) {
+      margin: 0;
+    }
   }
 }
