Убрал возможность поиска в селектах

--- a/src/styles/components/form.css
+++ b/src/styles/components/form.css
@@ -42,7 +42,7 @@
     }
 
     .Select-control {
-      height: auto;
+      height: 47px;
       font-size: 1em;
       background-color: transparent;
       border: none;
