--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,7 +14,7 @@
     left: 0;
     z-index: 10;
     width: 100%;
-    box-shadow: 0 -10px 25px -10px color(#000000 alpha(15%));
+    box-shadow: 0 -10px 25px -10px color(var(--color-secondary) alpha(15%));
 
     @media (--screen-md) {
       position: relative;
