--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -2,6 +2,7 @@
   --font-main: 'Montserrat', 'Helvetica', 'Arial', sans-serif;
   
   --color-semi-dark: color(#000000 a(25%));
+  --color-dark: #2c2c2c;
   --color-light-blue: #cbd6e9;
   --color-light-text: color(#000000 a(50%));
   --color-green: #1ac791;
