--- a/src/styles/components/text.css
+++ b/src/styles/components/text.css
@@ -17,7 +17,15 @@
     color: #fff;
   }
 
+  &--dark {
+    color: var(--color-dark);
+  }
+
   &--semibold {
     font-weight: 500;
+  }
+
+  &--center {
+    text-align: center;
   }
 }
