--- a/src/components/HistoryItem/HistoryItem.css
+++ b/src/components/HistoryItem/HistoryItem.css
@@ -1,3 +1,4 @@
+@import '../../styles/_media.css';
 @import '../../styles/_variables.css';
 
 .history-item {
@@ -12,11 +13,15 @@
   &:hover,
   &:focus {
     .history-item__box {
-      opacity: 1;
+      @media (--screen-md) {
+        opacity: 1;
+      }
     }
 
     .history-item__day {
-      opacity: 0;
+      @media (--screen-md) {
+        opacity: 0;
+      }
     }
   }
 
@@ -30,8 +35,12 @@
     padding: 11px 15px;
     padding-left: 25px;
     background-color: #ffffff;
-    opacity: 0;
+    opacity: 1;
     transition: 0.15s ease;
+
+    @media (--screen-md) {
+      opacity: 0;
+    }
   }
 
   &__button {
@@ -56,10 +65,15 @@
   &__day {
     color: var(--color-secondary);
     font-weight: 400;
+    opacity: 0;
     transition: 0.15s ease;
 
     &:first-letter {
       text-transform: uppercase;
+    }
+
+    @media (--screen-md) {
+      opacity: 1;
     }
   }
 
