--- a/src/components/IconButton/IconButton.css
+++ b/src/components/IconButton/IconButton.css
@@ -8,14 +8,14 @@
   border: none;
   border-radius: 0;
   cursor: pointer;
-  opacity: 0.25;
+  opacity: 0.4;
   transition: 0.15s ease;
   appearance: none;
 
   &:hover,
   &:focus {
     outline: none;
-    opacity: 0.6;
+    opacity: 0.7;
   }
 
   &--close {
@@ -24,5 +24,9 @@
 
   &--edit {
     background-image: url('./edit.svg');
+  }
+
+  &--delete {
+    background-image: url('./delete.svg');
   }
 }
