--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,3 +1,6 @@
+@import '../../styles/_media.css';
+@import '../../styles/_variables.css';
+
 .sidebar {
   padding: 15px 0 0 0;
   font-size: 1rem;
