--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -13,7 +13,7 @@
   }
 
   &__item {
-    width: 80px;
+    width: 25%;
     height: 50px;
 
     @media (--screen-md) {
@@ -77,7 +77,7 @@
 
   &__counter {
     position: absolute;
-    right: 12px;
+    right: 20%;
     bottom: 5px;
     z-index: 10;
     display: flex;
