--- a/src/components/HistoryItem/HistoryItem.css
+++ b/src/components/HistoryItem/HistoryItem.css
@@ -82,7 +82,7 @@
     padding: 0;
     overflow: hidden;
     list-style: none;
-    border-radius: 3px;
+    border-radius: 0;
   }
 
   &__list-item {
@@ -90,7 +90,7 @@
   }
 
   &__footer {
-    padding: 0 15px 15px;
+    padding: 15px;
     text-align: center;
   }
 }
