--- a/src/components/SongButton/SongButton.css
+++ b/src/components/SongButton/SongButton.css
@@ -38,9 +38,10 @@
     align-items: center;
     width: 35px;
     padding: 8px;
-    background: var(--color-main) url('./handler.svg') center no-repeat;
+    background: transparent url('./handler.svg') center no-repeat;
     background-size: 100%;
     background-origin: content-box;
+    border-left: 1px solid var(--color-main);
     opacity: 0.2;
   }
 }
