--- a/src/components/SongButton/SongButton.css
+++ b/src/components/SongButton/SongButton.css
@@ -7,14 +7,11 @@
   background-color: #ffffff;
 
   &__inner {
-    flex: 1;
-    padding: 15px;
-  }
-
-  &__top {
     display: flex;
+    flex: 1;
     justify-content: space-between;
-    margin-bottom: 0.4em;
+    align-items: center;
+    padding: 15px;
   }
 
   &__middle {
@@ -24,6 +21,7 @@
   }
 
   &__title {
+    margin-bottom: 0.4em;
     color: var(--color-secondary);
     font-weight: 500;
   }
