--- a/src/components/Label/Label.css
+++ b/src/components/Label/Label.css
@@ -1,6 +1,7 @@
 @import '../../styles/_variables.css';
 
 .label {
+  display: inline-block;
   padding: 0.2rem 1.2rem;
   font-weight: 600;
   font-size: 0.7rem;
