--- a/src/components/SongButton/SongButton.css
+++ b/src/components/SongButton/SongButton.css
@@ -14,16 +14,18 @@
     padding: 15px;
   }
 
-  &__middle {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  &__content {
+    flex: 1;
   }
 
   &__title {
     margin-bottom: 0.4em;
     color: var(--color-secondary);
     font-weight: 500;
+  }
+
+  &__label {
+    margin-top: 10px;
   }
 
   &__close {
