--- a/src/components/SongItem/SongItem.css
+++ b/src/components/SongItem/SongItem.css
@@ -42,6 +42,7 @@
     color: var(--color-secondary);
     font-weight: 600;
     font-size: 1.125em;
+    line-height: 1.25em;
   }
 
   &__controls {
