--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -9,11 +9,14 @@
 }
 
 body {
-  background-color: #ffffff;
-  /* background-color: #F3F9FF; */
-  background-image: linear-gradient(45deg, var(--color-main) 0%, #f0f5fb 80%);
-  background-attachment: fixed;
-  background-size: 100%;
+  background-color: var(--color-main);
+
+  @media (--screen-md) {
+    background-color: transparent;
+    background-image: linear-gradient(45deg, var(--color-main) 0%, #f0f5fb 80%);
+    background-attachment: fixed;
+    background-size: 100%;
+  }
 }
 
 .container {
