--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -3,7 +3,7 @@
   
   --color-semi-dark: color(#000000 a(25%));
   --color-dark: #2c2c2c;
-  --color-light-blue: #cbd6e9;
+  --color-light-blue: #e1e9f3;
   --color-light-text: color(#000000 a(50%));
   --color-green: #1ac791;
   --color-purple: #48486b;
