--- a/src/styles/components/title.css
+++ b/src/styles/components/title.css
@@ -4,6 +4,7 @@
   font-weight: 400;
   font-size: 1.5rem;
   font-family: var(--font-main);
+  line-height: 1.25em;
 
   @media (--screen-md) {
     margin: 1.2em 0;
