--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -17,7 +17,7 @@
       margin-top: 0;
 
       .list__button {
-        animation: ShowScale 0.5s;
+        /*animation: ShowScale 0.5s;*/
       }
     }
 
@@ -29,9 +29,9 @@
       z-index: 100;
 
       .list__button {
-        transform-origin: center;
-        animation: ScaleButton 0.2s;
-        animation-fill-mode: forwards;
+        /*transform-origin: center;*/
+        /*animation: ScaleButton 0.2s;*/
+        /*animation-fill-mode: forwards;*/
       }
     }
   }
@@ -40,7 +40,7 @@
     width: 100%;
     box-shadow: none;
     transform-origin: top;
-    animation: ShowRotate 0.2s;
+    /*animation: ShowRotate 0.2s;*/
   }
 }
 
