--- a/src/components/SongButton/SongButton.css
+++ b/src/components/SongButton/SongButton.css
@@ -11,7 +11,7 @@
     flex: 1;
     justify-content: space-between;
     align-items: center;
-    padding: 15px;
+    padding: 20px 15px;
   }
 
   &__content {
@@ -19,9 +19,10 @@
   }
 
   &__title {
-    margin-bottom: 0.4em;
+    /*margin-bottom: 0.4em;*/
     color: var(--color-secondary);
     font-weight: 500;
+    line-height: 1.4em;
   }
 
   &__label {
