Добавлена анимация перемещаемой песни

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -29,9 +29,9 @@
       z-index: 100;
 
       .list__button {
-        /*transform-origin: center;*/
-        /*animation: ScaleButton 0.2s;*/
-        /*animation-fill-mode: forwards;*/
+        transform-origin: center;
+        animation: ScaleButton 0.2s;
+        animation-fill-mode: forwards;
       }
     }
   }
