--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,6 +5,7 @@
 /* Styles */
 
 @import 'react-select/dist/react-select.css';
+@import 'react-datepicker/dist/react-datepicker.css';
 
 /* Components */
 
