--- a/src/components/Label/Label.css
+++ b/src/components/Label/Label.css
@@ -1,12 +1,18 @@
 @import '../../styles/_variables.css';
+@import '../../styles/_media.css';
 
 .label {
   display: inline-block;
-  padding: 0.2rem 1rem;
+  padding: 0.2rem 0.6rem;
   font-weight: 600;
-  font-size: 0.7rem;
+  font-size: 0.65rem;
   line-height: 1.4rem;
   border-radius: 5rem;
+
+  @media (--screen-md) {
+    padding: 0.2rem 1rem;
+    font-size: 0.7rem;
+  }
 
   &--new {
     color: #ffffff;
