fix: change server data to fake data

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -30,6 +30,10 @@
     font-size: 1rem;
   }
 
+  &--medium {
+    font-size: 1rem;
+  }
+
   &--small {
     padding: 0.2rem 1rem;
     font-size: 0.7rem;
